# colloquium-dmiti

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.MD  README.md  build.sh  metrics.py  pyproject.toml  requirements.txt
src/: cas.py  main.py
src/core/base/: Integer.py  Natural.py  Polynom.py  Rational.py
src/core/modules/: ABS_Z_N.py  ADD_1N_N.py  ADD_NN_N.py  COM_NN_D.py  DIV_NN_Dk.py  DIV_NN_N.py  GCF_NN_N.py  LCM_NN_N.py  MOD_NN_N.py  MUL_ND_N.py  MUL_NN_N.py  MUL_Nk_N.py  MUL_ZM_Z.py  NZER_N_B.py  (+5 more)
tests/base/: test_base_Integer.py  test_base_Natural.py  test_base_Polynom.py  test_base_Rational.py
tests/modules/: test_ADD_NN_N.py  test_DIV_NN_Dk.py  test_DIV_NN_Nk.py  test_MUL_NN_N.py  test_SUB_NN_N.py  test_module_ABS_Z_N.py  test_module_ADD_1N_N.py  test_module_ADD_NN_N.py  test_module_ADD_PP_P.py  test_module_ADD_QQ_Q.py  test_module_ADD_ZZ_Z.py  test_module_COM_NN_D.py  test_module_DEG_P_N.py  test_module_DER_P_P.py  test_module_DIV_NN_Dk.py  test_module_DIV_NN_N.py  test_module_DIV_PP_P.py  test_module_DIV_QQ_Q.py  test_module_DIV_ZZ_Z.py  test_module_FAC_P_Q.py  test_module_GCF_NN_N.py  test_module_GCF_PP_P.py  test_module_INT_Q_B.py  test_module_LCM_NN_N.py  test_module_LED_P_Q.py  test_module_MOD_NN_N.py  test_module_MOD_PP_P.py  test_module_MOD_ZZ_Z.py  test_module_MUL_ND_N.py  test_module_MUL_NN_N.py  test_module_MUL_Nk_N.py  test_module_MUL_PP_P.py  test_module_MUL_PQ_P.py  test_module_MUL_Pxk_P.py  test_module_MUL_QQ_Q.py  test_module_MUL_ZM_Z.py  test_module_MUL_ZZ_Z.py  test_module_NMR_P_P.py  test_module_NZER_N_B.py  test_module_POZ_Z_D.py  (+10 more)
(+54 files in other folders)
