[project]
name = "сolloquium_dmiti"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flet.app]
path = "src"
module = "main"

[tool.flet]
product = "SKA"
copyright = "2026 leti"
version = "0.0.1"
